--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+    <script src="jquery-3.4.1.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,19 +14,15 @@
         <header><h1> Crystal Game </h1></header>
         <Section id="rules">
             <P>You will be given a random number at the start of the game.</P>
-            <br>
             <p> There are four crystals below. By clicking on the crystal you will add a specific amount of points to your total score.</p>
-            <br>
             <p>
                 You win the game if your total is equal to the randomly generated number. You lose if your total goes over the random number.
             </p>
-            <br>
             <p>
                 The value of each crystal is hidden from you.
             </p>
-            <br>
             <p>
-                Each time the game ends the value of the cry will change. 
+                Each time the game ends the value of the crstal will change. 
             </p>
         </Section>
 
@@ -40,9 +38,9 @@
 
         <section id="buttons">
         <Input type="image" width=150px class="blackCrystal" src="./assets/images/blackCrystal.jpg" alt="Me">
-        <Input type="image" width=150px class="blackCrystal" src="./assets/images/blueCrystal.jpg" alt="Me">
-        <Input type="image" width=150px class="blackCrystal" src="./assets/images/greenCrystal.jpg" alt="Me">
-        <Input type="image" width=150px class="blackCrystal" src="./assets/images/purpleCrystal.jpg" alt="Me">
+        <Input type="image" width=150px class="blueCrystal" src="./assets/images/blueCrystal.jpg" alt="Me">
+        <Input type="image" width=150px class="greenCrystal" src="./assets/images/greenCrystal.jpg" alt="Me">
+        <Input type="image" width=150px class="purpleCrystal" src="./assets/images/purpleCrystal.jpg" alt="Me">
         </section>
 
         <section id="total">
@@ -52,7 +50,6 @@
         <section id="totalscore">
             <span id="totalpoints"></span>
         </section>
-
     </div>
 </body>
 </html>
