after help from Mac

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <script type="text/javascript" src="./assets/javascript/game.js"></script>
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         </Section>
 
         <Section id="random_num">
-            <span id="target"></span>
+            <span id="randomNumber"></span>
         </Section>
         
         <section id="score">
@@ -44,12 +44,15 @@
         </section>
 
         <section id="total">
-            <p>Your total is: </p>
+            <p>Your total is:
+                <span id="totalpoints"></span> 
+            </p>
         </section>
 
         <section id="totalscore">
             <span id="totalpoints"></span>
         </section>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     </div>
 </body>
 </html>
